Fixed the logo sizing and spacing and rounding for project, education, and experience. Added Kinaxis.

--- a/src/App.css
+++ b/src/App.css
@@ -25,10 +25,56 @@ div.media .media-heading .jobTotalDuration{
   display: block;
 }
 
-div.media img{
+/* div.media img{
   height: 10vmin;
   margin-right: 10px;
-  border-radius: 50px;
+  border-radius: 10px;
+} */
+
+.education-img-div{
+  width: 15vmin;
+  margin-right: 10px;
+}
+
+.education-img{
+  width: 100%;
+  height: 100%;
+}
+
+.cert-img-div{
+  width: 15vmin;
+  margin-right: 10px;
+  margin-bottom: 7px;
+  margin-bottom: 7px;
+}
+
+.cert-img{
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.project-img-div{
+  width: 15vmin;
+  margin-right: 10px;
+  margin-bottom: 7px;
+  margin-bottom: 7px;
+}
+
+.project-img{
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.job-img-div{
+  width: 17vmin;
+  margin-right: 10px;
+}
+
+.job-img{
+  width: 100%;
+  height: 100%;
 }
 
 div.media .jobDuration{
@@ -61,7 +107,7 @@ div.media .jobLocation{
 }
 
 body{
-  padding-top: 70px;
+  padding-top: 90px;
 }
 
 .full-width{
